[metadata]
name = airflow_code_editor_se
version = file: airflow_code_editor/VERSION
keywords = airflow, airflow-plugin, apache-airflow, editor
description = Apache Airflow code editor and file manager
author = Zemlyanskiy Aleksey Albertovich
author_email = Zemlyanskiy.A.Al@sberbank.ru
url = https://stash.delta.sbrf.ru/projects/AIRFLOW_SE/repos/airflow_code_editor_se
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_files = LICENSE
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: System :: Monitoring
    Framework :: Apache Airflow
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
project_urls =
    Bug Tracker = https://stash.delta.sbrf.ru/projects/AIRFLOW_SE/repos/airflow_code_editor_se
    Source Code = https://stash.delta.sbrf.ru/projects/AIRFLOW_SE/repos/airflow_code_editor_se

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.6
packages = find:
;install_requires =
;    apache-airflow
;    fs

[options.packages.find]
include = airflow_code_editor*
exclude =
    scripts
    scripts.*
    tests
    tests.*

[options.entry_points]
airflow.plugins =
    airflow_code_editor = airflow_code_editor.airflow_code_editor:CodeEditorPlugin

[options.extras_require]
test = pytest

[aliases]
test = pytest

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 120
extend-ignore =
    E203
    E401
    W504
    E221
