[metadata]
name = airflow_exporter_se
version = file: airflow_exporter/VERSION
keywords = sber, airflow, apache-airflow, prometheus, exporter, metrics
description = Airflow Exporter Sber Edition (SE) for Apache Airflow
author = Zemlyanskiy Aleksey Albertovich
author_email = Zemlyanskiy.A.Al@sberbank.ru
url = https://stash.delta.sbrf.ru/projects/AIRFLOW_SE/repos/airflow_exporter_se
long_description = file: README.md
long_description_content_type = text/markdown
license = SberData Platform, Inner Source Code
license_files = LICENSE
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: SberData Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: System :: Monitoring
    Framework :: Apache Airflow
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
project_urls =
    Bug Tracker = https://stash.delta.sbrf.ru/projects/AIRFLOW_SE/repos/airflow_exporter_se
    Source Code = https://stash.delta.sbrf.ru/projects/AIRFLOW_SE/repos/airflow_exporter_se

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.8
packages = find:
;setup_requires =
;    setuptools_scm
;install_requires =
;    apache-airflow>=2.0.0
;    prometheus-client>=0.16.0
;    prometheus-flask-exporter>=0.20.3

[options.packages.find]
include = airflow_exporter*
exclude =
    scripts
    scripts.*
    tests
    tests.*
    resource
    resource.*

[options.entry_points]
airflow.plugins =
    airflow_exporter_se = airflow_exporter:AirflowExporterSEPlugin

[options.extras_require]
test = pytest

[aliases]
test = pytest

[bdist_wheel]
universal = False

[sdist]
formats = zip, gztar
