[metadata]
name = apache-airflow-providers-se-spark
version = file: airflow/providers/se/spark/VERSION
keywords = sber, airflow, apache-airflow, spark
description = Package of Airflow SE (Sber Edition) - Provider Spark SE for Apache Airflow
author = Zemlyanskiy Aleksey Albertovich
author_email = Zemlyanskiy.A.Al@sberbank.ru
url = https://stash.delta.sbrf.ru/projects/AIRFLOW_SE/repos/airflow_providers_se_spark
long_description = file: README.md
long_description_content_type = text/markdown
license = SberData Platform, Inner Source Code
license_files = LICENSE
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: SberData Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: System :: Monitoring
    Framework :: Apache Airflow
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
project_urls =
    Bug Tracker = https://stash.delta.sbrf.ru/projects/AIRFLOW_SE/repos/airflow_providers_se_spark
    Source Code = https://stash.delta.sbrf.ru/projects/AIRFLOW_SE/repos/airflow_providers_se_spark

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.8
packages =
    airflow.providers.se.spark
    airflow.providers.se.spark.hooks
    airflow.providers.se.spark.operators
    airflow.providers.se.spark.utils
;packages = find:
;setup_requires =
;    setuptools_scm
;install_requires =
;    apache-airflow>=2.4.0
;    psycopg2-binary>=2.9.2

;[options.packages.find]
;where = airflow
;include =
;    airflow.providers.se.spark*
;    airflow.providers.se.spark.hooks*
;    airflow.providers.se.spark.operators*
;    airflow.providers.se.spark.utils*
;exclude =
;    tests
;    tests.*
;    resource
;    resource.*

[options.entry_points]
apache_airflow_provider =
    provider_info = airflow.providers.se.spark.get_provider_info:get_provider_info

[options.extras_require]
test = pytest

[aliases]
test = pytest

[bdist_wheel]
universal = False

[sdist]
formats = zip, gztar
