[metadata]
name = airflow_se
version = file: airflow_se/VERSION
keywords = sber, airflow, apache-airflow
description = Package of Sber Edition (SE) for Apache Airflow
author = Zemlyanskiy Aleksey Albertovich
author_email = Zemlyanskiy.A.Al@sberbank.ru
url = https://stash.delta.sbrf.ru/projects/AIRFLOW_SE/repos/airflow_se
long_description = file: README.md
long_description_content_type = text/markdown
license = SberData Platform, Inner Source Code
license_files = LICENSE
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: SberData Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: System :: Monitoring
    Framework :: Apache Airflow
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
project_urls =
    Bug Tracker = https://stash.delta.sbrf.ru/projects/AIRFLOW_SE/repos/airflow_se
    Source Code = https://stash.delta.sbrf.ru/projects/AIRFLOW_SE/repos/airflow_se

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.8
packages = find:
;setup_requires =
;    setuptools_scm
;install_requires =
;    apache-airflow
;    pamela
;    gssapi
;    confluent-kafka

[options.packages.find]
include = airflow_se*
exclude =
    tests
    tests.*
    resource
    resource.*

[options.entry_points]
console_scripts =
    airflow_se = airflow_se.executor:run
    create_env_se = airflow_se.create_env:run
    push_secman_se = airflow_se.push_secman:run

[options.extras_require]
test = pytest

[aliases]
test = pytest

[bdist_wheel]
universal = False

[sdist]
formats = zip, gztar
